@@ -18,7 +18,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.util.Arrays;
-import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -60,12 +59,11 @@ class StudyRankingServiceImplTest {
         StudyMember m2 = StudyMember.builder().study(study).user(user2).rankPoint(800).build();
 
         when(studyRepository.existsById(1L)).thenReturn(true);
-
         when(studyMemberRepository.findAllByStudyIdOrderByRankPointDesc(1L))
                 .thenReturn(Arrays.asList(m1, m2));
 
         // when
-        MyRankResponseDto myRank = rankingService.getMyRank(1L, 2L);
+        MyRankResponseDto myRank = rankingService.getMyRank(1L, user2);
 
         // then
         assertThat(myRank.my_rank()).isEqualTo(2);
@@ -78,24 +76,23 @@ class StudyRankingServiceImplTest {
         when(studyRepository.existsById(99L)).thenReturn(false);
 
         // when & then
-        assertThatThrownBy(() -> rankingService.getMyRank(99L, 1L))
+        assertThatThrownBy(() -> rankingService.getMyRank(99L, user1))
                 .isInstanceOf(BusinessException.class)
                 .hasFieldOrPropertyWithValue("errorCode", ErrorCode.STUDY_NOT_FOUND);
     }
 
     @Test
     void 유저가_스터디_멤버가_아니면_예외_발생() {
-        // given
-        StudyMember m1 = StudyMember.builder().study(study).user(user1).rankPoint(1000).build();
-
+        //given
         when(studyRepository.existsById(1L)).thenReturn(true);
+        StudyMember m1 = StudyMember.builder().study(study).user(user2).rankPoint(1000).build();
         when(studyMemberRepository.findAllByStudyIdOrderByRankPointDesc(1L))
-                .thenReturn(List.of(m1));
+                .thenReturn(Arrays.asList(m1));
 
         // when & then
-        assertThatThrownBy(() -> rankingService.getMyRank(1L, 99L))
+        assertThatThrownBy(() -> rankingService.getMyRank(1L, user1))
                 .isInstanceOf(BusinessException.class)
-                .hasMessageContaining("사용자가 해당 스터디의 멤버가 아닙니다.");
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.FORBIDDEN_STUDY_MEMBER_ONLY);
     }
 
     @Test
@@ -108,11 +105,12 @@ class StudyRankingServiceImplTest {
         StudyMember m4 = StudyMember.builder().study(study).user(user4).rankPoint(1300).build();
 
         when(studyRepository.existsById(1L)).thenReturn(true);
+        when(studyMemberRepository.existsByStudyIdAndUserId(1L, user1.getId())).thenReturn(true);
         when(studyMemberRepository.findAllByStudyIdOrderByRankPointDesc(1L))
                 .thenReturn(Arrays.asList(m1, m2, m3, m4));
 
         // when
-        TotalRankingResponseDto result = rankingService.getTotalRanking(1L);
+        TotalRankingResponseDto result = rankingService.getTotalRanking(1L, user1);
 
         // then
         assertThat(result.ranking()).hasSize(4);
@@ -126,4 +124,15 @@ class StudyRankingServiceImplTest {
         assertThat(result.ranking().get(3).userName()).isEqualTo("갈매기");
     }
 
+    @Test
+    void 전체랭킹_조회시_유저가_스터디_멤버가_아니면_예외_발생() {
+        // given
+        when(studyRepository.existsById(1L)).thenReturn(true);
+        when(studyMemberRepository.existsByStudyIdAndUserId(1L, user1.getId())).thenReturn(false);
+
+        // when & then
+        assertThatThrownBy(() -> rankingService.getTotalRanking(1L, user1))
+                .isInstanceOf(BusinessException.class)
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.FORBIDDEN_STUDY_MEMBER_ONLY);
+    }
 }
